Add new SVG icons for hamburger menu, notifications, search, upload, voice search, and YouTube apps

--- a/styles/header.css
+++ b/styles/header.css
@@ -2,6 +2,7 @@
   height: 55px;
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
 }
 
 .left-section {
@@ -14,6 +15,8 @@
   flex: 1;
   margin-left: 70px;
   margin-right: 35px;
+  max-width: 500px;
+
 }
 
 .right-section {
