--- a/styles/header.css
+++ b/styles/header.css
@@ -48,16 +48,55 @@
 
 .search-button {
   height: 40px;
-  width: 60px;
+  width: 66px;
+  background-color: rgb(240, 240, 240);
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(192 192, 192);
+  margin-left: -1px;
+  margin-right: 10px;
+}
+
+.search-icon {
+  height: 25px;
+  margin-top: 4px;
 }
 
 .voice-search-button {
   height: 40px;
   width: 40px;
+  border-radius: 20px;
+  border: none;
+  background-color:  rgb(245, 245, 245);
 }
+
+.voice-search-icon {
+  height: 24px;
+  margin-top: 4px;
+}
+
     
 .right-section {
-  background-color: lightblue;
-  width: 200px;
+  width: 180px;
+  margin-right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
+.upload-icon {
+  height: 24px;
+}
+
+.youtube-apps-icon {
+  height: 24px;
+}
+
+.notifications-icon {
+  height: 24px;
+}
+
+.current-user-picture {
+  height: 32px;
+  border-radius: 16px;
 }
