--- a/styles/header.css
+++ b/styles/header.css
@@ -1,8 +1,17 @@
 .header {
   height: 55px;
+
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  
+  position: fixed;
+  top: o;
+  left: 0;
+  right: 0;
+
+  background-color: white;
+
 }
 
 .left-section {
@@ -39,6 +48,7 @@
   border-color: rgb(192, 192, 192);
   border-radius: 2px;
   box-shadow: inset 1px 2px 3px rgba(0, 0, 0, 0.05);
+  width: 0;
 }
 
 .search-bar::placeholder {
@@ -78,10 +88,11 @@
     
 .right-section {
   width: 180px;
-  margin-right: 20px;
+  margin-right: 20px; 
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-shrink: 0;
 }
 
 .upload-icon {
