--- a/styles/general.css
+++ b/styles/general.css
@@ -1,10 +1,14 @@
-p{
+p {
   font-family: Roboto, Arial;
   margin-top: 0;
   margin-bottom: 0;
- }
+}
 
 body {
   margin: 0;
-  
-} 
+  padding-top: -8;
+}
+
+.video-grid {
+  padding-top: 80px;
+}
