--- a/styles/header.css
+++ b/styles/header.css
@@ -4,30 +4,32 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  
+
   position: fixed;
   top: o;
   left: 0;
   right: 0;
 
   background-color: white;
-
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: grey;
 }
 
 .left-section {
   display: flex;
   align-items: center;
-  }
+}
 
-  .hamburger-menu {
-    height: 24px;
-    margin-left: 24px;
-    margin-right: 24px;
-  }
+.hamburger-menu {
+  height: 24px;
+  margin-left: 24px;
+  margin-right: 24px;
+}
 
-  .youtube-logo {
-    height: 20px;
-  }
+.youtube-logo {
+  height: 20px;
+}
 
 .middle-section {
   flex: 1;
@@ -77,7 +79,7 @@
   width: 40px;
   border-radius: 20px;
   border: none;
-  background-color:  rgb(245, 245, 245);
+  background-color: rgb(245, 245, 245);
 }
 
 .voice-search-icon {
@@ -85,10 +87,9 @@
   margin-top: 4px;
 }
 
-    
 .right-section {
   width: 180px;
-  margin-right: 20px; 
+  margin-right: 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
