--- a/styles/video.css
+++ b/styles/video.css
@@ -1,5 +1,5 @@
 .thumbnail {
-  width: 100%;   
+  width: 100%;
 }
 
 .video-title {
@@ -14,31 +14,28 @@
   margin-left: 12px;
 }
 
-
 .video-info-grid {
   display: grid;
-  grid-template-columns: 50px 1fr ;
-  
+  grid-template-columns: 50px 1fr;
 }
 
 .profile-picture {
   width: 40px;
   border-radius: 50px;
-  
 }
 
 .thumbnail-row {
   margin-bottom: 12px;
-} 
+  position: relative;
+}
 
 .video-author,
-.video-stats 
-{
+.video-stats {
   font-size: 12px;
   color: rgb(96, 96, 96);
 }
 
-.video-author{
+.video-author {
   margin-bottom: 4px;
 }
 
@@ -47,5 +44,12 @@
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 16px;
   row-gap: 40px;
+}
 
+.video-time {
+  background-color: black;
+  color: white;
+  position: absolute;
+  bottom: 8px;
+  right: 5px;
 }
