--- a/styles/video.css
+++ b/styles/video.css
@@ -47,6 +47,14 @@
 }
 
 .video-time {
+  font-family: Roboto, Arial;
+  font-size: 12px;
+  font-weight: 500;
+  padding-left: 4px;
+  padding-right: 4px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  border-radius: 2px;
   background-color: black;
   color: white;
   position: absolute;
