--- a/styles/header.css
+++ b/styles/header.css
@@ -117,11 +117,11 @@
   position: absolute;
   top: 0;
   right: 0;
-  background-color: red;
+  background-color: rgb(200 0, 0);
   color: white;
   font-family: Roboto, Arial;
-  font-size: 12px;
-  padding-left: 6px;
+  font-size: 11px;
+  padding-left: 5px;
   padding-right: 6px;
   padding-top: 2px;
   padding-bottom: 2px;
