--- a/styles/header.css
+++ b/styles/header.css
@@ -115,14 +115,14 @@
 
 .notifications-count {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: -2px;
+  right: -5px;
   background-color: rgb(200 0, 0);
   color: white;
   font-family: Roboto, Arial;
   font-size: 11px;
   padding-left: 5px;
-  padding-right: 6px;
+  padding-right: 5px;
   padding-top: 2px;
   padding-bottom: 2px;
   border-radius: 10px;
