--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -9,8 +9,16 @@
 
 .sidebar-link {
   height: 76px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar-link:hover {
   background-color: rgb(235, 235, 235);
+}
+
+.sidebar-link img {
+  height: 24px;
+  margin-top: 16px;
 }
