--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -5,13 +5,15 @@
   top: 55px;
   background-color: white;
   width: 72px;
+  z-index: 200;
 }
 
 .sidebar-link {
-  height: 76px;
+  height: 74px;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .sidebar-link:hover {
@@ -20,4 +22,10 @@
 
 .sidebar-link img {
   height: 24px;
+  margin-bottom: 4px;
+}
+
+.sidebar-link div {
+  font-family: Roboto, Arial;
+  font-size: 10px;
 }
