--- a/styles/general.css
+++ b/styles/general.css
@@ -7,9 +7,11 @@ p {
 body {
   margin: 0;
   padding-top: -8;
+  background-color: rgb(248, 248, 248);
 }
 
 .video-grid {
   padding-top: 80px;
-  padding-left: 80px;
+  padding-left: 96px;
+  padding-right: 24px;
 }
