--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -6,6 +6,7 @@
   background-color: white;
   width: 72px;
   z-index: 200;
+  padding-top: 5px;
 }
 
 .sidebar-link {
@@ -14,6 +15,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  cursor: pointer;
 }
 
 .sidebar-link:hover {
