--- a/styles/header.css
+++ b/styles/header.css
@@ -68,6 +68,17 @@
   border-color: rgb(192 192, 192);
   margin-left: -1px;
   margin-right: 10px;
+  position: relative;
+}
+
+.search-button .tooltip {
+  position: absolute;
+  background-color: gray;
+  color: white;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 
 .search-icon {
