Refactor header.css and youtube.html to add tooltips to search and voice search buttons

--- a/styles/header.css
+++ b/styles/header.css
@@ -71,12 +71,18 @@
 }
 
 .search-button,
-.voice-search-button {
+.voice-search-button,
+.upload-icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
 }
 
 .search-button .tooltip,
-.voice-search-button.tooltip {
+.voice-search-button .tooltip,
+.upload-icon-container .tooltip {
+  font-family: Roboto, Arial;
   position: absolute;
   background-color: gray;
   color: white;
@@ -90,15 +96,17 @@
   opacity: 0;
   transition: opacity 0.15s;
   pointer-events: none;
+  white-space: nowrap;
 }
 
-.search-button:hover .tooltip {
+.search-button:hover .tooltip,
+.voice-search-button:hover .tooltip,
+.upload-icon-container:hover .tooltip {
   opacity: 1;
 }
 
 .search-icon {
   height: 25px;
-  margin-top: 4px;
 }
 
 .voice-search-button {
@@ -109,9 +117,8 @@
   background-color: rgb(245, 245, 245);
 }
 
-.voice-search-icon {
+.voice- search-icon {
   height: 24px;
-  margin-top: 4px;
 }
 
 .right-section {
