Refactor header.css and youtube.html to add tooltips to search, voice search, and notifications buttons

--- a/styles/header.css
+++ b/styles/header.css
@@ -83,7 +83,8 @@
 .search-button .tooltip,
 .voice-search-button .tooltip,
 .upload-icon-container .tooltip,
-.youtube-apps-icon-container .tooltip {
+.youtube-apps-icon-container .tooltip,
+.notifications-icon-container .tooltip {
   font-family: Roboto, Arial;
   position: absolute;
   background-color: gray;
@@ -104,7 +105,8 @@
 .search-button:hover .tooltip,
 .voice-search-button:hover .tooltip,
 .upload-icon-container:hover .tooltip,
-.youtube-apps-icon-container:hover .tooltip {
+.youtube-apps-icon-container:hover .tooltip,
+.notifications-icon-container:hover .tooltip {
   opacity: 1;
 }
 
