--- a/styles/video.css
+++ b/styles/video.css
@@ -64,7 +64,7 @@
   font-family: Roboto, Arial;
   font-size: 12px;
   font-weight: 500;
-  padding: 4px 10px;
+  padding: 4px;
   border-radius: 2px;
   background-color: black;
   color: white;
